# sethfip

./: Cargo.toml  README.md
sethfip/: Cargo.toml
sethfip/src/: cli.rs  error.rs  main.rs
sethfip_core/: Cargo.toml
sethfip_core/contracts/: Storage.sol
sethfip_core/migrations/: 1_initial_migration.js
sethfip_core/src/: error.rs  lib.rs  utils.rs
