[package]
name = "sethfip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sethfip_core = { path = "../sethfip_core" }
tokio = "1.11.0"
clap = { version = "3.1.8", features = ["derive"] }
anyhow = "1.0.43"
web3 = "0.17.0"
ipfs-api-backend-hyper = { version = "0.4" }
tracing = "0.1.26"
http = "0.2.4"
tracing-subscriber = "0.2.20"
ethabi = "17.0.0"
url = "2.2.2"
thiserror = "1.0.29"
